--- a/index.html
+++ b/index.html
@@ -18,33 +18,22 @@
     </tr>
   </table >
   <hr border="1 noshade">
-  <h3>Skill List and Experiences:</h3>
+  <h3>Work & Experiences:</h3>
   <table cellspacing="8">
     <tr bgcolor="green">
-      <td>Skills</td>
+      <td>Date</td>
       <td align="center">Name</td>
-      <td>Years of experience</td>
+      <td>Work</td>
     </tr>
     <tr bgcolor="yellow">
-      <td align="center">1</td>
-      <td><a href="http://google.com">Web development</a></td>
-      <td align="center">1</td>
+      <td>2009-2015</td>
+        <td>Freelancer</td>
+      <td>Upwork ( formerly Odesk)</td>
     </tr>
     <tr bgcolor="yellow">
-      <td align="center">2</td>
-      <td><a href="http://bdjobs.com">Graphic design</a> </td>
-      <td align="center">1</td>
-    </tr>
-    <tr bgcolor="yellow">
-      <td align="center">3</td>
-      <td><a href="http://upwork.com">Internet research and marketing</a></td>
-      <td align="center">5</td>
-    </tr>
-    <tr bgcolor="yellow">
-      <td align="center">4</td>
-      <td><a href="http://indeed.com">Virtual/Privet Assistant</a></td>
-      <td align="center">4</td>
-    </tr>
+      <td>2021-2022</td>
+      <td>CSR</td>
+        <td> Digicon PVt </td>
   </table>
   <h3>Skill Proficiency:</h3>
   <table cellspacing="10 ">
