--- a/index.html
+++ b/index.html
@@ -21,22 +21,26 @@
   <h3>Work & Experiences:</h3>
   <table cellspacing="8">
     <tr bgcolor="green">
-      <td>Date</td>
-      <td align="center">Name</td>
-      <td>Work</td>
+      <td>Dates</td>
+      <td>Post</td>
+      <td>Company</td>
     </tr>
     <tr bgcolor="yellow">
       <td>2009-2015</td>
-        <td>Freelancer</td>
-      <td>Upwork ( formerly Odesk)</td>
+      <td>Freelancer</td>
+      <td>Upwrok ( formerly Odesk.com)</td>
     </tr>
     <tr bgcolor="yellow">
-      <td>2021-2022</td>
-      <td>CSR</td>
-        <td> Digicon PVt </td>
+      <td>2020-2021</td>
+      <td>Customer Care Representative</td>
+      <td>Digicon Technologies </td>
+    </tr>
   </table>
   <h3>Skill Proficiency:</h3>
-  <table cellspacing="10 ">
+  <table>
+    <tr>
+      <td></td>
+      <td><table cellspacing="10 ">
     <tr>
       <td bgcolor="green">Graphic design</td>
       <td bgcolor="blue">⭐⭐⭐</td>
@@ -56,6 +60,12 @@
     <tr>
       <td bgcolor="green">Research</td>
       <td bgcolor="blue">⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td bgcolor="green">Customer Care</td>
+      <td bgcolor="blue">⭐⭐⭐⭐⭐</td>
+    </tr>
+  </table></td>
     </tr>
   </table>
   <hr size="1" noshade>
